k8s/AuthService/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice
  labels:
    app: authservice
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
