k8s/AuthService/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: authservice
spec:
  hosts:
    - "authservice.local"
  gateways:
    - shared-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: authservice
            port:
              number: 8080
